# DocStrands

./: 404.html  README.md  README.qmd  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
README_files/libs/bootstrap/: bootstrap-31b6c44b3faa51eeb2d2b65c8b0ed6e9.min.css
api/: index.html
docs/: README.md  index.html
search/: search_index.json
src/docstrands/: __init__.py  annotations.py  parsed_func.py  types.py
tests/: test_docstring.py  test_google.py  utils.py
